// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Marker component rendering renders an empty marker 1`] = `
<body>
  <div>
    <button
      aria-controls=":r0:"
      aria-expanded="true"
      aria-label="Edit marker: Marker 1"
      class="marker_cvqkp3-o_O-markerSelected_y0aq99"
      id=":r0:-anchor"
      style="left: 50%; top: 50%;"
      type="button"
    />
  </div>
  <div>
    <div
      aria-describedby=":r0:-content"
      aria-labelledby=":r0:-title"
      class="default_7zhre1-o_O-hide_16igwdi-o_O-content-top_1jtvojh-o_O-inlineStyles_i5mxc2"
      data-placement="top"
      id=":r0:"
      role="dialog"
    >
      <div
        class="default_7zhre1-o_O-content_11mqw8v-o_O-dropdownBody_1gyjybc"
      >
        <div
          class="labelContainer_veipjp"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="input_ttwki7-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-default_j8cf2b"
            id=":r1:"
            placeholder="ARIA label (for screen readers)"
            tabindex="0"
            type="text"
            value="Marker 1"
          />
        </div>
        <hr
          class="dividerHorizontal_10sn35t"
        />
        <div
          aria-label="Answer choices"
          aria-multiselectable="true"
          class="default_7zhre1-o_O-listbox_1413512"
          id=":r2:"
          role="listbox"
          tabindex="0"
        />
        <hr
          class="dividerHorizontal_10sn35t"
        />
        <button
          aria-disabled="false"
          class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_ojsq95"
          data-kind="tertiary"
          tabindex="0"
          type="button"
        >
          <span
            class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
          >
            Delete marker
          </span>
        </button>
      </div>
      <div
        class="default_7zhre1-o_O-tailContainer_m1n018-o_O-inlineStyles_17q6yl"
        data-placement="top"
      >
        <svg
          aria-hidden="true"
          class="arrow_oo4scr"
          height="12"
          style="margin-left: 8px; margin-right: 8px; padding-bottom: 8px;"
          width="24"
        >
          <filter
            height="200%"
            id="tooltip-dropshadow-top-2"
            width="200%"
            x="-50%"
            y="-50%"
          >
            <fegaussianblur
              in="SourceAlpha"
              stdDeviation="3"
            />
            <fecomponenttransfer>
              <fefunca
                slope="0.3"
                type="linear"
              />
            </fecomponenttransfer>
          </filter>
          <g
            transform="translate(0,5.5)"
          >
            <polyline
              fill="var(--wb-semanticColor-core-shadow-transparent-mid)"
              filter="url(#tooltip-dropshadow-top-2)"
              points="0,0 12,12 24,0"
              stroke="var(--wb-semanticColor-core-shadow-transparent-mid)"
            />
          </g>
          <polyline
            fill="var(--wb-semanticColor-core-background-base-default)"
            points="0,0 12,12 24,0"
            stroke="var(--wb-semanticColor-core-background-base-default)"
          />
          <polyline
            fill="var(--wb-semanticColor-core-background-base-default)"
            points="0,0 12,12 24,0"
            stroke="var(--wb-semanticColor-core-border-neutral-subtle)"
          />
          <polyline
            points="0,-0.5 24,-0.5"
            stroke="var(--wb-semanticColor-core-background-base-default)"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`Marker component rendering renders with answers and choices 1`] = `
<body>
  <div>
    <button
      aria-controls=":r3:"
      aria-expanded="true"
      aria-label="Edit marker: Marker 1"
      class="marker_cvqkp3-o_O-markerWithAnswers_1gtt1k8-o_O-markerSelected_y0aq99"
      id=":r3:-anchor"
      style="left: 50%; top: 50%;"
      type="button"
    />
  </div>
  <div>
    <div
      aria-describedby=":r3:-content"
      aria-labelledby=":r3:-title"
      class="default_7zhre1-o_O-hide_16igwdi-o_O-content-top_1jtvojh-o_O-inlineStyles_i5mxc2"
      data-placement="top"
      id=":r3:"
      role="dialog"
    >
      <div
        class="default_7zhre1-o_O-content_11mqw8v-o_O-dropdownBody_1gyjybc"
      >
        <div
          class="labelContainer_veipjp"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-required="false"
            class="input_ttwki7-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-default_j8cf2b"
            id=":r4:"
            placeholder="ARIA label (for screen readers)"
            tabindex="0"
            type="text"
            value="Marker 1"
          />
        </div>
        <hr
          class="dividerHorizontal_10sn35t"
        />
        <div
          aria-label="Answer choices"
          aria-multiselectable="true"
          class="default_7zhre1-o_O-listbox_1413512"
          id=":r5:"
          role="listbox"
          tabindex="0"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="button_vr44p2-o_O-reset_1ejugoq-o_O-link_13xlah4-o_O-wrapper_su0a8m-o_O-innerWrapper_mnq6zz-o_O-clickable_1krawm8-o_O-optionItem_yre2rc-o_O-listboxOptionItem_1si2p3p-o_O-inlineStyles_3hmsj"
            id=":r5:-option-0"
            role="option"
            tabindex="-1"
            type="button"
          >
            <div
              class="default_7zhre1-o_O-accessory_9jq3ey-o_O-accessoryLeft_ddq71i-o_O-inlineStyles_3hmsj"
            >
              <div
                class="default_7zhre1-o_O-checkbox_tyfhob checkbox"
              />
            </div>
            <div
              class="default_7zhre1-o_O-content_1j3eb01-o_O-inlineStyles_iqfeo"
            >
              <div
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-label_1oxsvo1"
              >
                Choice 1
              </div>
            </div>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="button_vr44p2-o_O-reset_1ejugoq-o_O-link_13xlah4-o_O-wrapper_su0a8m-o_O-innerWrapper_mnq6zz-o_O-clickable_1krawm8-o_O-optionItem_yre2rc-o_O-listboxOptionItem_1si2p3p-o_O-inlineStyles_3hmsj"
            id=":r5:-option-1"
            role="option"
            tabindex="-1"
            type="button"
          >
            <div
              class="default_7zhre1-o_O-accessory_9jq3ey-o_O-accessoryLeft_ddq71i-o_O-inlineStyles_3hmsj"
            >
              <div
                class="default_7zhre1-o_O-checkbox_tyfhob checkbox"
              />
            </div>
            <div
              class="default_7zhre1-o_O-content_1j3eb01-o_O-inlineStyles_iqfeo"
            >
              <div
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-label_1oxsvo1"
              >
                Choice 2
              </div>
            </div>
          </button>
        </div>
        <hr
          class="dividerHorizontal_10sn35t"
        />
        <button
          aria-disabled="false"
          class="button_vr44p2-o_O-reset_1ck4g21-o_O-shared_1jpsfmg-o_O-default_ojsq95"
          data-kind="tertiary"
          tabindex="0"
          type="button"
        >
          <span
            class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-text_1kowsup"
          >
            Delete marker
          </span>
        </button>
      </div>
      <div
        class="default_7zhre1-o_O-tailContainer_m1n018-o_O-inlineStyles_17q6yl"
        data-placement="top"
      >
        <svg
          aria-hidden="true"
          class="arrow_oo4scr"
          height="12"
          style="margin-left: 8px; margin-right: 8px; padding-bottom: 8px;"
          width="24"
        >
          <filter
            height="200%"
            id="tooltip-dropshadow-top-5"
            width="200%"
            x="-50%"
            y="-50%"
          >
            <fegaussianblur
              in="SourceAlpha"
              stdDeviation="3"
            />
            <fecomponenttransfer>
              <fefunca
                slope="0.3"
                type="linear"
              />
            </fecomponenttransfer>
          </filter>
          <g
            transform="translate(0,5.5)"
          >
            <polyline
              fill="var(--wb-semanticColor-core-shadow-transparent-mid)"
              filter="url(#tooltip-dropshadow-top-5)"
              points="0,0 12,12 24,0"
              stroke="var(--wb-semanticColor-core-shadow-transparent-mid)"
            />
          </g>
          <polyline
            fill="var(--wb-semanticColor-core-background-base-default)"
            points="0,0 12,12 24,0"
            stroke="var(--wb-semanticColor-core-background-base-default)"
          />
          <polyline
            fill="var(--wb-semanticColor-core-background-base-default)"
            points="0,0 12,12 24,0"
            stroke="var(--wb-semanticColor-core-border-neutral-subtle)"
          />
          <polyline
            points="0,-0.5 24,-0.5"
            stroke="var(--wb-semanticColor-core-background-base-default)"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;
